TestSuite/errors/err0110.pas
type TRec = ^TRec2;
     TRec2 = ^TRec;

begin

end.